--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="green">#39A552</color>
 
-    <color name="colorBlack">#42505C</color>
+    <color name="black_color">#42505C</color>
     <color name="grey">#79828B</color>
     <color name="grey2">#A3A3A3</color>
     <color name="red">#C91C22</color>
